--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -111,5 +111,28 @@
   "Privacy7Text": "7. we will make readily available to customers information about our policies and practices relating to the management of personal information.",
 
   "BuyingAFX": "Buying AFX",
-  "BuyingAFXtext": "To make a purchase, please contact our manager."
+  "BuyingAFXtext": "To make a purchase, please contact our manager.",
+
+  "My Subscriptions": "My Subscriptions",
+  "AFXPAIDtext": "Multifunctional software for Counter-Strike 2 & Steam. An innovative way to get a case with an increased level of security.",
+  "Launch date": "Launch date",
+  "Date of activation": "Date of activation",
+  "End date": "End date",
+  "join": "join",
+  "Profile": "Profile",
+  "Subscribe": "Subscribe",
+  "Statistics": "Statistics",
+  "Exit": "Exit",
+  "Join Private Chat": "Join Private Chat",
+  "Reset Hwid": "Reset Hwid",
+  "Need help": "Need help",
+  "Forgot your password?": "Forgot your password?",
+  "You have not yet enabled": "You have not yet enabled",
+  "Connect": "Connect",
+  "Not connected": "Not connected",
+  "Reset": "Reset",
+  "Login": "Login",
+  "2FA Authenticator": "2FA Authenticator",
+  "Balance": "Balance",
+  "WeChat": "WeChat"
 }
