--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -1,114 +1,138 @@
 {
-  "Sign In": "Sign In",
-  "PreOrderHeader": "Pre-Order",
+  "Sign In": "Войти",
+  "PreOrderHeader": "Пред-заказ",
 
-  "Ask question": "Ask question",
+  "Ask question": "Задать вопрос",
 
-  "Email": "Email",
-  "Password": "Password",
-  "Re-Password": "Re-enter password",
+  "Email": "Почта",
+  "Password": "Пароль",
+  "Re-Password": "Повторно введите пароль",
   "SignIn": "Sign in",
   "SignUp": "Sign up",
-  "LoginError": "You have entered an incorrect login or password",
-  "RegError": "You have entered an incorrect login or password",
-  "HaveAcc": "Don't have an account yet? ",
+  "LoginError": "Вы ввели неверный логин или пароль",
+  "RegError": "Вы ввели неверный логин или пароль",
+  "HaveAcc": "У вас еще нет учетной записи?",
 
-  "AutoFarmX": "AutoFarm X - provides an innovative and reliable solution for farm",
+  "AutoFarmX": "AutoFarm X - это инновационное и надежное решение для фермерских хозяйств",
   "MainDescription": "Многофункциональное программное обеспечение для Counter-Strike 2 и Steam. Инновационный способ получить кейс с повышенным уровнем безопасности.",
-  "Pre-order": "Pre-Order",
-  "Pre-orderDiscr": "For this amount you buy access for a month, the price is further $70 per month.",
-  "Contact for purchase": "Contact for purchase",
-  "PrivateProject": "Private project",
-  "PrivateProjectDiscr": "The software is private, with a limited number of users. We do this because we are aware that public software is becoming an easy target for Valve bans and fixes.",
-  "DataProtection": "Data protection",
-  "DataProtectionDiscr": "All data associated with your accounts is securely encrypted and stored only on your computer. We don't have access to them. ",
-  "EasyToUse": "Easy to use",
-  "EasyToUseDiscr": "The new product features a clear and simple design. It is easy to understand, which makes its use as convenient as possible.",
-  "Support": "Support",
-  "SupportDiscr": " Our team has been expanded with support specialists, which will allow each user to quickly receive the necessary assistance.",
-  "OneSubscription": "One subscription - an infinite number of computers",
-  "OneSubscriptionDiscr": "Now you don't need to buy additional software — you can connect up to 16 virtual machines from different computers and manage them from the main server. To increase the number of slots, just purchase additional services. Farming will become.",
+  "Pre-order": "Пред-заказ",
+  "Pre-orderDiscr": "За эту сумму вы покупаете доступ на месяц, цена дополнительно составляет 70 долларов в месяц.",
+  "Contact for purchase": "Свяжитесь с нами для покупки",
+  "PrivateProject": "Приватный проект",
+  "PrivateProjectDiscr": "Программное обеспечение является частным, и его использует ограниченное число пользователей. Мы делаем это, потому что понимаем, что общедоступное программное обеспечение становится легкой мишенью для запретов и исправлений Valve.",
+  "DataProtection": "Защита данных",
+  "DataProtectionDiscr": "Все данные, связанные с вашими учетными записями, надежно зашифрованы и хранятся только на вашем компьютере. У нас нет к ним доступа.",
+  "EasyToUse": "Простой в использовании",
+  "EasyToUseDiscr": "Новый продукт отличается четким и простым дизайном. В нем легко разобраться, что делает его использование максимально удобным.",
+  "Support": "Поддержка",
+  "SupportDiscr": "Наша команда пополнилась специалистами службы поддержки, что позволит каждому пользователю быстро получить необходимую помощь.",
+  "OneSubscription": "Одна подписка - бесконечное количество компьютеров",
+  "OneSubscriptionDiscr": "Теперь вам не нужно покупать дополнительное программное обеспечение — вы можете подключить до 16 виртуальных машин с разных компьютеров и управлять ими с основного сервера. Чтобы увеличить количество слотов, просто приобретите дополнительные сервисы. Фермерство станет.",
   "DeatMatch": "DeatMatch",
-  "DeatMatchDiscr": "Automatic farming of CS2 accounts in Deathmatch mode with flexible configuration and use of virtual machines. There are two farming modes available – each account for itself and filling out the entire server.",
-  "Generator": "Generator",
-  "GeneratorDiscr": "Automatic creation of Steam accounts for requests using proxies, streams and flexible configuration.",
+  "DeatMatchDiscr": "Автоматический фарм аккаунтов CS2 в режиме Deathmatch с гибкой настройкой и использованием виртуальных машин. Доступно два режима фарма – каждый аккаунт для себя и заполнение всего сервера.",
+  "Generator": "Генератор",
+  "GeneratorDiscr": "Автоматическое создание аккаунтов Steam для запросов с использованием прокси, стримов и гибкой настройки.",
   "Changer": "Changer",
-  "ChangerDiscr": "Automatic change of Steam account data on requests (mail, password, binding unlinking of maFile) using proxies and streams.",
+  "ChangerDiscr": "Автоматическое изменение данных учетной записи Steam по запросам (почта, пароль, привязка, отмена привязки файла) с использованием прокси и стримов.",
   "Looter": "Looter",
-  "LooterDiscr": "Automatic transfer of items from different games on requests using proxies and streams.",
+  "LooterDiscr": "Автоматическая передача предметов из разных игр по запросам с использованием прокси-серверов и потоков.",
   "TF2": "Team Fortress 2",
-  "TF2Discr": "Automatic farming of TF2 accounts with the ability to automatically purchase an item on the account to unlock the game.",
+  "TF2Discr": "Автоматическое создание аккаунтов TF2 с возможностью автоматической покупки предметов на аккаунте для разблокировки игры.",
   "Unique services": "Unique services",
-  "Unique services descr": "Cheap buying prime on accounts, selling drops at a good percentage and more. These services will be available only to AFX software users.",
-  "NotAll": "And that's not all",
-  "NotAllDiscr": "Our team is already developing new modes that will soon be added to the panel",
+  "Unique services descr": "Дешевые покупки prime на аккаунтах, продажа дропов под хороший процент и многое другое. Эти услуги будут доступны только пользователям AFX software.",
+  "NotAll": "И это еще не все",
+  "NotAllDiscr": "Наша команда уже разрабатывает новые модели, которые вскоре будут добавлены на панель",
 
-  "PreOrderTitle": "Pre-Order. This project is a closed. Only 300 slots will be sold in 3 waves.",
-  "PreOrderTDiscr": "For this amount you buy access for a month, the price is further $70 per month.",
+  "PreOrderTitle": "Оформляйте предварительный заказ. Этот проект закрыт. В 3 волны будет продано всего 300 слотов.",
+  "PreOrderTDiscr": "За эту сумму вы покупаете доступ на месяц, цена дополнительно составляет 70 долларов в месяц.",
 
-  "Slot purchase": "Slot purchase",
-  "Slots": "Slots",
-  "November": "November",
-  "October": "October",
+  "Slot purchase": "Стоимость места",
+  "Purchase": "Покупка",
+  "Slots": "Мест",
+  "November": "Ноябрь",
+  "October": "Октябрь",
 
-  "DMimgText": "Limit of 16 virutal machines or 900 accounts per week. The limit can be increased.",
+  "DMimgText": "Лимит - 16 виртуальных машин или 900 учетных записей в неделю. Лимит может быть увеличен.",
 
-  "Q1": "If I buy a seat and one license, do I need to buy another seat for the second license?",
+  "BuyingAFX": "Покупка AFX",
+  "BuyingAFXtext": "Чтобы совершить покупку, пожалуйста, свяжитесь с нашим менеджером.",
+
+  "Q1": "Если я куплю место и одну лицензию, нужно ли мне покупать еще одно место для получения второй лицензии?",
   "Q1T": "Нет, место закрепляется каждому пользователю, которое даёт доступ к уникальным чатам и сервисам. В случае, если пользователю нужно купить ещё одну лицензию, то ему нужно будет заплатить только за лицензию, без платы за место.",
-  "Q2": "How will the boost work in DM mode?",
+  "Q2": "Как будет работать boost в режиме DM?",
   "Q2T": "У пользователя будет два выбора для буста: каждый сам за себя и заполнение всего сервера. Каждый аккаунт будет запускаться в отдельной виртульной машине.",
-  "Q3": "How will the virtual machines work?",
+  "Q3": "Как будут работать виртуальные машины?",
   "Q3T": "Виртуальные машины можно будет запускать на разных ПК, вне зависимости от их местоположения, что заметно упростит логистику для пользователей.",
-  "Q4": "Will there be any limits?",
+  "Q4": "Будут ли какие-то ограничения?",
   "Q4T": "У каждой лицензии будет лимит в 16 виртуальных машин, что равняется бусту на 900 аккаунтах. В случае, если пользователю нужно больше виртуальных машин, то ему потребуется приобрести ещё одну лицензию.",
-  "Q5": "Will there be any discounts?",
+  "Q5": "Будут ли какие-то скидки?",
   "Q5T": "Нет, мы не будем делать никакие скидки для покупки новой панели.",
-  "Q6": "Will there be a subscription forever?",
+  "Q6": "Будет ли подписка действовать вечно?",
   "Q6T": "Нет, будет только месячная подписка.",
 
-  "TermsTitle": "",
-  "TermsLastUpdare": "",
-  "Term1Title": "",
-  "Term1Text": "",
-  "Term2Title": "",
-  "Term2PointA": "",
-  "Term2PointA1": "",
-  "Term2PointA2": "",
-  "Term2PointA3": "",
-  "Term2PointA4": "",
-  "Term2PointB": "",
-  "Term3Title": "",
-  "Term3Text": "",
-  "Term4Title": "",
-  "Term4Text": "",
-  "Term5Title": "",
-  "Term5Text": "",
-  "Term6Title": "",
-  "Term6Text": "",
-  "Term7Title": "",
-  "Term7Text": "",
-  "Term8Title": "",
-  "Term8Text1": "",
-  "Term8Text2": "",
-  "Term8Text3": "",
-  "Term8Text4": "",
-  "Term9Title": "",
-  "Term9Text": "",
-  "Term10Title": "",
-  "Term10Text": "",
-  "Term11Title": "",
-  "Term11Text": "",
+  "TermsTitle": "Terms of use TEDONSTORE",
+  "TermsLastUpdare": "LAST UPDATE: 12.07.2022",
+  "Term1Title": "1. Acceptance of terms of use",
+  "Term1Text": "BY ACCESSING THIS WEB SITE, YOU ARE AGREEING TO BE BOUND BY THESE TERMS AND CONDITIONS OF USE, ALL APPLICABLE LAWS AND REGULATIONS, AND AGREE THAT YOU ARE RESPONSIBLE FOR COMPLIANCE WITH ANY APPLICABLE LOCAL LAWS. IF YOU DO NOT AGREE WITH ANY OF THESE TERMS, YOU ARE PROHIBITED FROM USING OR ACCESSING THIS SITE. THE MATERIALS CONTAINED IN THIS WEB SITE ARE PROTECTED BY APPLICABLE COPYRIGHT AND TRADE MARK LAW. ",
+  "Term2Title": "2. Use license",
+  "Term2PointA": "A. PERMISSION IS GRANTED TO TEMPORARILY DOWNLOAD ONE COPY OF THE MATERIALS (INFORMATION OR SOFTWARE) ON TEDONSTORE®'S WEB SITE FOR PERSONAL, NON-COMMERCIAL TRANSITORY VIEWING ONLY. THIS IS THE GRANT OF A LICENSE, NOT A TRANSFER OF TITLE, AND UNDER THIS LICENSE YOU MAY NOT:",
+  "Term2PointA1": "1. MODIFY OR COPY THE MATERIALS",
+  "Term2PointA2": "2. USE THE MATERIALS FOR ANY COMMERCIAL PURPOSE, OR FOR ANY PUBLIC DISPLAY (COMMERCIAL OR NON-COMMERCIAL);",
+  "Term2PointA3": "3. ATTEMPT TO DECOMPILE OR REVERSE ENGINEER ANY SOFTWARE CONTAINED ON TEDONSTORE®'S WEB SITE;",
+  "Term2PointA4": "4. REMOVE ANY COPYRIGHT OR OTHER PROPRIETARY NOTATIONS FROM THE MATERIALS; OR5. TRANSFER THE MATERIALS TO ANOTHER PERSON OR 'MIRROR' THE MATERIALS ON ANY OTHER SERVER.",
+  "Term2PointB": "B. THIS LICENSE SHALL AUTOMATICALLY TERMINATE IF YOU VIOLATE ANY OF THESE RESTRICTIONS AND MAY BE TERMINATED BY TEDONSTORE® AT ANY TIME. UPON TERMINATING YOUR VIEWING OF THESE MATERIALS OR UPON THE TERMINATION OF THIS LICENSE, YOU MUST DESTROY ANY DOWNLOADED MATERIALS IN YOUR POSSESSION WHETHER IN ELECTRONIC OR PRINTED FORMAT.",
+  "Term3Title": "3. Disclaimer",
+  "Term3Text": "The materials on tedonstore®'s web site are provided 'as is'. tedonstore® makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. further, tedonstore® does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its internet web site or otherwise relating to such materials or on any sites linked to this site.",
+  "Term4Title": "4. Limitations",
+  "Term4Text": "In no event shall tedonstore® or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on tedonstore®'s internet site, even if tedonstore® or a tedonstore® authorized representative has been notified orally or in writing of the possibility of such damage. because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.",
+  "Term5Title": "5. Revisions and errata",
+  "Term5Text": "The materials appearing on tedonstore®'s web site could include technical, typographical, or photographic errors. tedonstore® does not warrant that any of the materials on its web site are accurate, complete, or current. tedonstore® may make changes to the materials contained on its web site at any time without notice. tedonstore® does not, however, make any commitment to update the materials.",
+  "Term6Title": "6. Links",
+  "Term6Text": "Tedonstore® has not reviewed all of the sites linked to its internet web site and is not responsible for the contents of any such linked site. the inclusion of any link does not imply endorsement by tedonstore® of the site. use of any such linked web site is at the user's own risk.",
+  "Term7Title": "7. Site Terms Of Use Modifications",
+  "Term7Text": "Tedonstore® may revise these terms of use for its web site at any time without notice. by using this web site you are agreeing to be bound by the then current version of these terms and conditions of use.",
+  "Term8Title": "8. Subscription",
+  "Term8Text1": "1. the subscription is valid for the time purchased. when expired, the user is required to renew it manually or automatically, if the user accepted it.",
+  "Term8Text2": "2. USERS CAUGHT ABUSING THIRD PARTY PAYMENT SERVICES TO OBTAIN FREE SERVICES WILL BE IMMEDIATELY AND PERMANENTLY BANNED.",
+  "Term8Text3": "3. users caught selling subscriptions, cracking or alterating the behavior of the software will be immediately and permanently banned.",
+  "Term8Text4": "4. subscriptions may be terminated by tedonstore® at any time without warning and without liability, whether financial or not.",
+  "Term9Title": "9. Online gaming",
+  "Term9Text": "Tedonstore® accepts no responsibility to your online gaming accounts as a result of using this website or any software, or data contained within. you, the user, are solely responsible for your online gaming activities and any loss to any of your online gaming accounts, whether financial or not, is your responsibility.",
+  "Term10Title": "10. Payment policy",
+  "Term10Text": "Fraudulent charges with an account that sends money without the consent of the account holder or/and any kind of frauds will result in your account being instantly disabled, permanently terminated and/or legal action will be taken. we do not allow the user to share or resell his account, it will result in your account being instantly disabled, permanently terminated and/or legal action will be taken.",
+  "Term11Title": "11. Refunds",
+  "Term11Text": "Refunds for methods, kits, accounts, software and servers aren't possible.",
 
   "PrivacyTitle": "Terms of use TEDONSTORE",
   "PrivacyLastUpdare": "LAST UPDATE: 12.07.2022",
-  "Privacy1Text": "",
-  "Privacy2Text": "",
-  "Privacy3Text": "",
-  "Privacy4Text": "",
-  "Privacy5Text": "",
-  "Privacy6Text": "",
-  "Privacy7Text": "",
+  "Privacy1Text": "1. before or at the time of collecting personal information, we will identify the purposes for which information is being collected.",
+  "Privacy2Text": "2. we will collect and use of personal information solely with the objective of fulfilling those purposes specified by us and for other compatible purposes, unless we obtain the consent of the individual concerned or as required by law.",
+  "Privacy3Text": "3. we will only retain personal information as long as necessary for the fulfillment of those purposes.",
+  "Privacy4Text": "4. We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual concerned.",
+  "Privacy5Text": "5. personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date.",
+  "Privacy6Text": "6. We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.",
+  "Privacy7Text": "7. we will make readily available to customers information about our policies and practices relating to the management of personal information.",
 
-  "BuyingAFX": "",
-  "BuyingAFXtext": ""
+  "My Subscriptions": "Мои подписки",
+  "AFXPAIDtext": "Многофункциональное программное обеспечение для Counter-Strike 2 и Steam. Инновационный способ получить кейс с повышенным уровнем защиты.",
+  "Launch date": "Дата запуска",
+  "Date of activation": "Дата активации",
+  "End date": "Дата окончания",
+  "join": "join",
+  "Profile": "Профиль",
+  "Subscribe": "Подписки",
+  "Statistics": "Статистика",
+  "Exit": "Выход",
+  "Join Private Chat": "Присоединяйтесь к Приватному чату",
+  "Reset Hwid": "Сброс Hwid",
+  "Need help": "Нужна помощь",
+  "Forgot your password?": "Забыли свой пароль?",
+  "You have not yet enabled": "Вы еще не включили",
+  "Connect": "Подключить",
+  "Not connected": "Не подключен",
+  "Reset": "Сброс",
+  "Login": "Авторизоваться",
+  "2FA Authenticator": "2FA Authenticator",
+  "Balance": "Баланс",
+  "WeChat": "WeChat"
 }
