--- a/locales/chi/translation.json
+++ b/locales/chi/translation.json
@@ -4,7 +4,7 @@
 
   "Ask question": "提问",
 
-  "Email": "邮箱",
+  "Email": "用户名",
   "Password": "密码",
   "Re-Password": "Re-enter password",
   "SignIn": "登录",
