--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -8,10 +8,10 @@
   "Password": "Пароль",
   "Re-Password": "Повторно введите пароль",
   "SignIn": "Sign in",
-  "SignUp": "Sign up",
+  "SignUp": "Создать",
   "LoginError": "Вы ввели неверный логин или пароль",
   "RegError": "Вы ввели неверный логин или пароль",
-  "HaveAcc": "У вас еще нет учетной записи?",
+  "HaveAcc": "Ещё нет учетной записи?",
 
   "AutoFarmX": "AutoFarm X - это инновационное и надежное решение для фермерских хозяйств",
   "MainDescription": "Многофункциональное программное обеспечение для Counter-Strike 2 и Steam. Инновационный способ получить кейс с повышенным уровнем безопасности.",
