--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -7,11 +7,21 @@
   "Email": "Почта",
   "Password": "Пароль",
   "Re-Password": "Повторно введите пароль",
-  "SignIn": "Sign in",
+  "SignIn": "Войти",
   "SignUp": "Создать",
   "LoginError": "Вы ввели неверный логин или пароль",
-  "RegError": "Вы ввели неверный логин или пароль",
+  "RegError": "Невеврно заполнены поля",
   "HaveAcc": "Ещё нет учетной записи?",
+  "Code": "Код",
+
+  "CompleteRegistrationMessage": "код подтверждения был отправлен на ваш электронный адрес, введите его в поле ниже, чтобы продолжить смену пароля.",
+  "CompleteRecoveryPassword": "На ваш электронный адрес был отправлен код подтверждения, введите его в поле ниже, чтобы продолжить смену пароля.",
+
+  "Forgot password?": "Забыли пароль?",
+
+  "New Password": "Новый пароль",
+  "Repeat new password": "Повторите новый пароль",
+  "Confirm": "Подтвердить",
 
   "AutoFarmX": "AutoFarm X - это инновационное и надежное решение для фермерских хозяйств",
   "MainDescription": "Многофункциональное программное обеспечение для Counter-Strike 2 и Steam. Инновационный способ получить кейс с повышенным уровнем безопасности.",
