--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -4,6 +4,8 @@
 
   "Ask question": "Задать вопрос",
 
+  "LoginPlaceHolder": "Имя пользователя",
+
   "Email": "Почта",
   "Password": "Пароль",
   "Re-Password": "Повторно введите пароль",
@@ -21,6 +23,7 @@
 
   "New Password": "Новый пароль",
   "Repeat new password": "Повторите новый пароль",
+  "Next": "Далее",
   "Confirm": "Подтвердить",
 
   "AutoFarmX": "AutoFarm X - это инновационное и надежное решение для фермерских хозяйств",
