--- a/locales/chi/translation.json
+++ b/locales/chi/translation.json
@@ -149,21 +149,21 @@
   "Balance": "余额",
   "WeChat": "微信",
 
-  "Password reset": "Password reset",
-  "You've received an e-mail with a confirmation code. Enter the code to change your password.": "You've received an e-mail with a confirmation code. Enter the code to change your password.",
+  "Password reset": "密码重置",
+  "You've received an e-mail with a confirmation code. Enter the code to change your password.": "您已收到一封带有确认码的电子邮件。输入确认码以更改密码。",
   "Change": "Change",
-  "You have entered an invalid password, if you have forgotten your password, you can reset it.": "You have entered an invalid password, if you have forgotten your password, you can reset it.",
-  "You have entered the wrong code, you have 10 attempts after which your account will be locked.": "You have entered the wrong code, you have 10 attempts after which your account will be locked.",
-  "WeChat connect": "WeChat connect",
-  "To connect WeChat, write to your manager": "To connect WeChat, write to your manager",
-  "Discord connect": "Discord connect",
-  "To connect discord, follow the link below and click authorize": "To connect discord, follow the link below and click authorize",
-  "Telegram connect": "Telegram connect",
-  "To connect telegram go to the bot and copy the code and paste it.": "To connect telegram go to the bot and copy the code and paste it.",
-  "Link bot": "Link bot",
-  "Follow the instructions for connecting the 2fa protection.": "Follow the instructions for connecting the 2fa protection.",
-  "Download the google awntificator app to your phone": "Download the google awntificator app to your phone",
-  "Scan the qr-code or copy and paste the key": "Scan the qr-code or copy and paste the key",
-  "Enter the code from the app to confirm": "Enter the code from the app to confirm",
-  "You entered an invalid code, try again": "You entered an invalid code, try again"
+  "You have entered an invalid password, if you have forgotten your password, you can reset it.": "您输入的密码无效，如果您忘记了您的密码，您可以重置密码。",
+  "You have entered the wrong code, you have 10 attempts after which your account will be locked.": "您输入了错误的密码，您有10次尝试，之后您的帐户将被锁定。",
+  "WeChat connect": "微信",
+  "To connect WeChat, write to your manager": "要连接微信，请发送微信给我们的经理",
+  "Discord connect": "Discord",
+  "To connect discord, follow the link below and click authorize": "要连接Discord，请点击下面的链接并单击授权",
+  "Telegram connect": "电报",
+  "To connect telegram go to the bot and copy the code and paste it.": "要连接电报需要去机器人处复制代码并且粘贴它。",
+  "Link bot": "机器人链接",
+  "Follow the instructions for connecting the 2fa protection.": "按照说明连接2fa保护。",
+  "Download the google awntificator app to your phone": "下载谷歌认证应用程序到你的手机",
+  "Scan the qr-code or copy and paste the key": "扫描二维码或复制粘贴密钥",
+  "Enter the code from the app to confirm": "输入应用程序中的代码进行确认",
+  "You entered an invalid code, try again": "您输入的代码无效，请重试"
 }
