--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -19,6 +19,9 @@
   "CompleteRegistrationMessage": "A confirmation code has been sent to your email, please enter it in the box below to complete your registration",
   "CompleteRecoveryPassword": "A confirmation code has been sent to your email, enter it in the box below to continue changing your password",
 
+  "Ask question 2": "Ask question",
+  "Any questions about the new product? Then write to us and we willbe happy to help you.": "Any questions about the new product? Then write to us and we willbe happy to help you.",
+
   "Forgot password?": "Forgot password?",
 
   "New Password": "New Password",
